# investor-lab

./: .gitignore  .gitmodules  TODO.txt  architecture_setup.txt  makefile  start_app.sh  test.txt
.github/workflows/: neo4j-keep-alive.yml
demo-service/: main.py  pyproject.toml
demo-service/cifar10/: predict.py
etl-service/: daily_main.py  docker-compose.yml  historical_main.py  pyproject.toml
etl-service/src/: __init__.py  fmp_api.py  test.ipynb
etl-service/src/benchmarks/: benchmarks.py
etl-service/src/daily/: __init__.py  daily_forex.py  daily_market_cap.py  daily_price_volume.py
etl-service/src/historical/: __init__.py  etl_summary.py  historical_forex.py  historical_forex_full.py  historical_market_cap.py  historical_price_volume.py  indexer.py  stock_info.py  stock_info_update.py  stock_symbols.py
etl-service/src/metrics/: stock_metrics.py
etl-service/src/utils/: models.py  urls.py  utils.py
frontend/: README.md  env.example  next.config.js  package-lock.json  package.json  setup.sh
frontend/app/: PrefetchIndexMaker.tsx  globals.css  layout.tsx  page.tsx
frontend/app/(demo)/demo-apps/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: globals.css  page.tsx
frontend/app/(main)/etl-summary/: page.tsx
frontend/app/(main)/index-maker/: page.tsx
frontend/app/api/benchmark-data/: route.ts
frontend/app/api/create-index/: route.ts
frontend/app/api/etl-summary/: route.ts
frontend/app/api/index-fields/: route.ts
frontend/app/components/index-maker/: BenchmarkSelector.tsx  ConstituentWeightsTable.tsx  CountrySelector.tsx  DateRangePicker.tsx  (+15 more)
frontend/app/index-maker/: page.tsx
frontend/lib/: db.ts
frontend/types/: etl.ts
stock-service/: README.md  pyproject.toml  start_api.sh  temp_index_creator.py
stock-service/src/: index_maker.py  main.py  test.ipynb
stock-service/src/index_maker/: index_maker.py
stock-service/src/utils/: benchmark_data.py  benchmark_utils.py  csv_reader.py  field_maker.py  fields.py  fields_utils.py  utils.py
(+41 files in other folders)
