[project]
name = "demo-service"
version = "0.1.0"
description = "CIFAR-10 backend experiment"
authors = [
    {name = "Aleksa Mihajlovic",email = "mihajlovic.aleksa@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy (==1.26.4)", "pandas (==2.2.2)", "matplotlib (==3.9.2)"]

[tool.poetry]
packages = [
    { include = "cifar10" }
]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
