[project]
name = "stock-service"
version = "0.1.0"
description = "Portfolio maker, stock analyzer and other services"
authors = [
  { name = "Aleksa Mihajlovic", email = "mihajlovic.aleksa@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
  "aiohttp>=3.9.1",
  "python-dotenv>=1.0.0",
  "asyncio>=3.4.3",
  "pandas>=2.2.0",
  "psycopg2-binary>=2.9.10",
  "sqlalchemy>=2.0.41",
  "pydantic>=2.11.5",
  "apscheduler>=3.10.4",
  "ipykernel>=6.30.1",
  "polars>=1.32.3",
  "pyarrow>=21.0.0",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0"
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
